@@ -586,6 +586,9 @@ celeryd_wait $GEM_MAXLOOP"
             fi
         done
 
+        # print the log of the last calculation
+        oq-engine --show-log -1
+
         # Try to export a set of results AFTER the calculation
         echo \"Exporting calculation #1\"
         oq-engine --eos 1 /tmp/eos_1
