@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Added a command `oq-engine --show-log <job_id>`
+
   [Daniele Viganò]
   * Use the 'postgresql' meta package as dependency of the .deb
     package to support newer versions of Postgres; this makes
